--- a/public/frontend/assets/css/headstyle.css
+++ b/public/frontend/assets/css/headstyle.css
@@ -75,8 +75,8 @@ news-font{
 }
 
 .footer-area {
-	background-color:#F0F0ED;;
-	color: #000;
+	background-color:#1d5562;;
+	color: #ffffff;
 	padding: 5px;
 	margin-top: 10px;
 }
