--- a/public/frontend/assets/css/headstyle.css
+++ b/public/frontend/assets/css/headstyle.css
@@ -854,7 +854,7 @@ a:hover {
 
 
 .themesBazar_widget h3{
-	background: #01284F;
+	background: #1d5562;
 	color: #ffffff;
 	font-size: 20px;
 	text-align : left;
